# prj

./: README.md  pyproject.toml  run.py  strategy.md
app/: __init__.py  main.py  schemas.py  strategy.py
data/: .gitkeep  2330.TW.csv  SPY.csv
static/js/: main.js
templates/: base.html  dashboard.html
