[project]
name = "trading-backtester" 
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.3.3",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "psutil>=7.2.1",
    "pydantic>=2.10.4",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.51",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
